--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/picture?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=UTC&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://localhost:3306/moyu?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=UTC&autoReconnect=true&failOverReadOnly=false
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -30,5 +30,4 @@ spring:
 iconfont:
   link: //at.alicdn.com/t/font_794063_jd8qdplkhmp.css
 file:
-  filePath: D:/picture/
-  fileURL: D:/avatar/
+  filePath: D:/moyu/
